force-app/main/default/objects/Account/fields/Partner_for_reward__c.field-meta.xml
<CustomField>
    <fullName>Partner_for_reward__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Partner where members count for reward will be added</description>
    <inlineHelpText>Partner where members count for reward will be added</inlineHelpText>
    <label>Partner for reward</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Accounts (Partner for reward)</relationshipLabel>
    <relationshipName>Accounts2</relationshipName>
    <type>Lookup</type>
</CustomField>