force-app/main/default/objects/Account/fields/Percentage_of_Emergency_Prescriptions__c.field-meta.xml
<CustomField>
    <fullName>Percentage_of_Emergency_Prescriptions__c</fullName>
    <formula>if(Number_of_Prescriptions__c &gt; 0 , Number_of_Emergency_Prescriptions__c / Number_of_Prescriptions__c , 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Percentage of Emergency Prescriptions</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>