force-app/main/default/objects/Account/fields/PersonBirthdate_SPE__c.field-meta.xml
<CustomField>
    <fullName>PersonBirthdate_SPE__c</fullName>
    <description>Encrypted Birthdate For Members</description>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>Birthdate (PE)</label>
    <type>Date</type>
</CustomField>