force-app/main/default/objects/Account/fields/PersonEmail2__c.field-meta.xml
<CustomField>
    <fullName>PersonEmail2__c</fullName>
    <description>Used by workflow rules to route emails to email provided during account entry. This had to be created because the standard PersonEmail field is not available in workflow.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>PersonEmail2</label>
    <type>Email</type>
</CustomField>