force-app/main/default/objects/Account/fields/PersonEmail_SPE__c.field-meta.xml
<CustomField>
    <fullName>PersonEmail_SPE__c</fullName>
    <description>Encrypted Email For Members</description>
    <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>
    <label>Email (PE)</label>
    <type>Email</type>
</CustomField>