force-app/main/default/objects/Account/fields/PersonHomePhone_SPE__c.field-meta.xml
<CustomField>
    <fullName>PersonHomePhone_SPE__c</fullName>
    <description>Encrypted PersonHomePhone For Members</description>
    <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>
    <label>Home Phone (PE)</label>
    <type>Phone</type>
</CustomField>