force-app/main/default/objects/Account/fields/PersonMarket_Research_SMS_Opt_Out__c.field-meta.xml
<CustomField>
    <fullName>PersonMarket_Research_SMS_Opt_Out__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Market Research SMS Opt-Out</label>
    <type>Checkbox</type>
</CustomField>