force-app/main/default/objects/Account/fields/PersonMobilePhone_SPE__c.field-meta.xml
<CustomField>
    <fullName>PersonMobilePhone_SPE__c</fullName>
    <description>Encrypted Mobile For Members</description>
    <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>
    <label>Mobile (PE)</label>
    <type>Phone</type>
</CustomField>