force-app/main/default/objects/Account/fields/PersonOtherPhone_SPE__c.field-meta.xml
<CustomField>
    <fullName>PersonOtherPhone_SPE__c</fullName>
    <description>Encrypted Other Phone (PE) For Members</description>
    <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>
    <label>Other Phone (PE)</label>
    <type>Phone</type>
</CustomField>