force-app/main/default/objects/Account/fields/PersonProduct_Notification_SMS_Opt_Out__c.field-meta.xml
<CustomField>
    <fullName>PersonProduct_Notification_SMS_Opt_Out__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Product Notifications SMS Opt-Out</label>
    <type>Checkbox</type>
</CustomField>