force-app/main/default/objects/Account/fields/PersonPromotions_Email_Opt_Out__c.field-meta.xml
<CustomField>
    <fullName>PersonPromotions_Email_Opt_Out__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Promotions Email Opt-Out</label>
    <type>Checkbox</type>
</CustomField>