force-app/main/default/objects/Account/fields/PersonPromotions_SMS_Opt_Out__c.field-meta.xml
<CustomField>
    <fullName>PersonPromotions_SMS_Opt_Out__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Promotions_SMS_Opt-Out</label>
    <type>Checkbox</type>
</CustomField>