force-app/main/default/objects/Account/fields/PersonService_Notification_Email_Opt_Out__c.field-meta.xml
<CustomField>
    <fullName>PersonService_Notification_Email_Opt_Out__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Service Notifications Email Opt-Out</label>
    <type>Checkbox</type>
</CustomField>