force-app/main/default/objects/Account/fields/Phone_SPE__c.field-meta.xml
<CustomField>
    <fullName>Phone_SPE__c</fullName>
    <description>Encrypted Phone For Members</description>
    <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>
    <label>Phone (PE)</label>
    <type>Phone</type>
</CustomField>