force-app/main/default/objects/Account/fields/phoneOther__c.field-meta.xml
<CustomField>
    <fullName>phoneOther__c</fullName>
    <description>This is the other business direct phone number.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>This is the other business direct phone number.</inlineHelpText>
    <label>Phone (Other)</label>
    <length>15</length>
    <type>Text</type>
</CustomField>