force-app/main/default/objects/Account/fields/Physician__c.field-meta.xml
<CustomField>
    <fullName>Physician__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Physician</label>
    <length>255</length>
    <type>Text</type>
</CustomField>