force-app/main/default/objects/Account/fields/Preferred_clinic_for_follow_up__c.field-meta.xml
<CustomField>
    <fullName>Preferred_clinic_for_follow_up__c</fullName>
    <label>Preferred clinic for follow up</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CPAP Australia – Kogarah</fullName>
            </value>
            <value>
                <fullName>CPAP Australia - Parramatta</fullName>
            </value>
            <value>
                <fullName>CPAP Australia - Surrey Hills</fullName>
            </value>
            <value>
                <fullName>ResSleep – Bella Vista</fullName>
            </value>
            <value>
                <fullName>ResSleep - Dee Why</fullName>
            </value>
            <value>
                <fullName>ResSleep  - Miranda</fullName>
            </value>
            <value>
                <fullName>ResSleep - Mount Waverly</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>