force-app/main/default/objects/Account/fields/Preferred_clinic_for_follow_up_Other__c.field-meta.xml
<CustomField>
    <fullName>Preferred_clinic_for_follow_up_Other__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Preferred clinic for follow up - Other</label>
    <length>255</length>
    <type>Text</type>
</CustomField>