force-app/main/default/objects/Account/fields/Pricelist_Primary__c.field-meta.xml
<CustomField>
    <fullName>Pricelist_Primary__c</fullName>
    <label>Pricelist - Primary</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AUS - Moonstone</fullName>
            </value>
            <value>
                <fullName>AUS - Black Opal</fullName>
            </value>
            <value>
                <fullName>AUS - Ruby</fullName>
            </value>
            <value>
                <fullName>AUS - Sapphire</fullName>
            </value>
            <value>
                <fullName>AUS - Onyx</fullName>
            </value>
            <value>
                <fullName>AUS - Topaz</fullName>
            </value>
            <value>
                <fullName>AUS - Amethyst</fullName>
            </value>
            <value>
                <fullName>AUS - Citrine</fullName>
            </value>
            <value>
                <fullName>AUS - Jade</fullName>
            </value>
            <value>
                <fullName>AUS - Opal</fullName>
            </value>
            <value>
                <fullName>AUS - Sunstone</fullName>
            </value>
            <value>
                <fullName>AUS - Emerald</fullName>
            </value>
            <value>
                <fullName>AUS - Diamond</fullName>
            </value>
            <value>
                <fullName>AUS - Platinum</fullName>
            </value>
            <value>
                <fullName>AUS - Gold</fullName>
            </value>
            <value>
                <fullName>AUS - Silver</fullName>
            </value>
            <value>
                <fullName>AUS - Bronze</fullName>
            </value>
            <value>
                <fullName>AUS - Quartz</fullName>
            </value>
            <value>
                <fullName>AUS - Sleep RRP</fullName>
            </value>
            <value>
                <fullName>AUS - Diagnostics RRP</fullName>
            </value>
            <value>
                <fullName>AUS - Rubellite</fullName>
            </value>
            <value>
                <fullName>AUS - Turquoise</fullName>
            </value>
            <value>
                <fullName>AUS - On Quote</fullName>
            </value>
            <value>
                <fullName>AUS - Amber</fullName>
            </value>
            <value>
                <fullName>AUS - Aquamarine</fullName>
            </value>
            <value>
                <fullName>AUS - RC Jasper</fullName>
            </value>
            <value>
                <fullName>AUS - RC Quartz</fullName>
            </value>
            <value>
                <fullName>AUS - RC Diamond</fullName>
            </value>
            <value>
                <fullName>AUS - RC RRP</fullName>
            </value>
            <value>
                <fullName>AUS - SBS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>