force-app/main/default/objects/Account/fields/Primary_Diagnosis__c.field-meta.xml
<CustomField>
    <fullName>Primary_Diagnosis__c</fullName>
    <label>Primary Diagnosis</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Obstructive Sleep Apnoea (OSA)</fullName>
            </value>
            <value>
                <fullName>Central Sleep Apnoea (CSA)</fullName>
            </value>
            <value>
                <fullName>Mixed Apnoea</fullName>
            </value>
            <value>
                <fullName>Chronic Obstructive Pulmonary Disease (COPD)</fullName>
            </value>
            <value>
                <fullName>Overlap Syndrome (OSA &amp; COPD)</fullName>
            </value>
            <value>
                <fullName>Restrictive Lung Disease (e.g. Chest wall disorders, interstitial lung disease, sarcoidosis)</fullName>
            </value>
            <value>
                <fullName>Neuromuscular Disease</fullName>
            </value>
            <value>
                <fullName>Obesity Hypoventilation Syndrome (OHS)</fullName>
            </value>
            <value>
                <fullName>I do not have a relevant medical diagnosis</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Prefer not to mention</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>