force-app/main/default/objects/Account/fields/Primary_Diagnosis_Other__c.field-meta.xml
<CustomField>
    <fullName>Primary_Diagnosis_Other__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Primary Diagnosis - Other</label>
    <length>255</length>
    <type>Text</type>
</CustomField>