force-app/main/default/objects/Account/fields/Product_Launch_Ready__c.field-meta.xml
<CustomField>
    <fullName>Product_Launch_Ready__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Is this Authorised Dealer to be included in receiving SLMs and Launch Kits?</inlineHelpText>
    <label>Product Launch Ready</label>
    <type>Checkbox</type>
</CustomField>