force-app/main/default/objects/Account/fields/Product_Rego_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Product_Rego_Account_Name__c</fullName>
    <description>TASK0287184.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Required if Online Directory Listed is ticked. Account name displayed on the sv product rego page. Must include Account Name - Suburb</inlineHelpText>
    <label>Product Rego Account Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>