force-app/main/default/objects/Account/fields/PSG_Beds_Number__c.field-meta.xml
<CustomField>
    <fullName>PSG_Beds_Number__c</fullName>
    <label>PSG Beds Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>