force-app/main/default/objects/Account/fields/RAD__c.field-meta.xml
<CustomField>
    <fullName>RAD__c</fullName>
    <description>ResMed Australian Authorised Dealer</description>
    <inlineHelpText>Is this partner a ResMed Australian Authorised Dealer?</inlineHelpText>
    <label>RAD</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
            <value>
                <fullName>Blue</fullName>
            </value>
            <value>
                <fullName>Silver</fullName>
            </value>
            <value>
                <fullName>Gold</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>