force-app/main/default/objects/Account/fields/RDI_Score__c.field-meta.xml
<CustomField>
    <fullName>RDI_Score__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>RDI Score</label>
    <length>10</length>
    <type>Text</type>
</CustomField>