force-app/main/default/objects/Account/fields/Reason_for_Diagnosis__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Diagnosis__c</fullName>
    <label>Reason for Diagnosis</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Symptoms</fullName>
            </value>
            <value>
                <fullName>Partner</fullName>
            </value>
            <value>
                <fullName>Health</fullName>
            </value>
            <value>
                <fullName>Condition</fullName>
            </value>
            <value>
                <fullName>All of the above</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>