force-app/main/default/objects/Account/fields/Reason_for_not_scripting__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_not_scripting__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Enter reason for not scripting ResMed</inlineHelpText>
    <label>Reason for not scripting</label>
    <type>TextArea</type>
</CustomField>