force-app/main/default/objects/Account/fields/Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Record_Type__c</fullName>
    <defaultValue>$RecordType.Name</defaultValue>
    <description>For use with validation rule Validate_Referring_Sleep_Lab. Do not edit.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Record Type</label>
    <length>20</length>
    <type>Text</type>
</CustomField>