force-app/main/default/objects/Account/fields/Referring_Account__c.field-meta.xml
<CustomField>
    <fullName>Referring_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Referring Partner</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 AND (2 OR 3) OR 4 OR 5 OR 6</booleanFilter>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Partner, Accredited Partner, Partner - Sleep Lab</value>
        </filterItems>
        <filterItems>
            <field>Account.Type</field>
            <operation>equals</operation>
            <value>Accredited Partner, Sleep Lab, Partner - Sleep Lab, Sleep Specialist</value>
        </filterItems>
        <filterItems>
            <field>Account.Type</field>
            <operation>equals</operation>
            <value>Accredited Partner, Inactive/closed</value>
        </filterItems>
        <filterItems>
            <field>$Profile.Name</field>
            <operation>equals</operation>
            <value>sleepvantage Manager, sleepvantage Super Consultant, System Administrator</value>
        </filterItems>
        <filterItems>
            <field>$Profile.Name</field>
            <operation>equals</operation>
            <value>customers Profile</value>
        </filterItems>
        <filterItems>
            <field>$Profile.Name</field>
            <operation>equals</operation>
            <value>ROC Integration</value>
        </filterItems>
        <infoMessage>The Referring Partner must be a partner type of Partner or Partner - Sleep Lab.</infoMessage>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Member Referral (Referring Partner)</relationshipLabel>
    <relationshipName>Referring_Partner</relationshipName>
    <type>Lookup</type>
</CustomField>