force-app/main/default/objects/Account/fields/Referring_Partner__c.field-meta.xml
<CustomField>
    <fullName>Referring_Partner__c</fullName>
    <formula>Referring_Account__r.Phone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Referring Partner Phone</label>
    <type>Text</type>
</CustomField>