force-app/main/default/objects/Account/fields/Referring_Partner_Name__c.field-meta.xml
<CustomField>
    <fullName>Referring_Partner_Name__c</fullName>
    <formula>Referring_Account__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Referring Partner Name</label>
    <type>Text</type>
</CustomField>