force-app/main/default/objects/Account/fields/Referring_partner_oracle_name__c.field-meta.xml
<CustomField>
    <fullName>Referring_partner_oracle_name__c</fullName>
    <formula>Referring_Account__r.OracleActName__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Referring partner oracle name</label>
    <type>Text</type>
</CustomField>