force-app/main/default/objects/Account/fields/Referring_partner_oracle_number__c.field-meta.xml
<CustomField>
    <fullName>Referring_partner_oracle_number__c</fullName>
    <formula>Referring_Account__r.OracleActNumber__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Referring partner oracle number</label>
    <type>Text</type>
</CustomField>