force-app/main/default/objects/Account/fields/Referring_Partner_Outlet_Directory_City__c.field-meta.xml
<CustomField>
    <fullName>Referring_Partner_Outlet_Directory_City__c</fullName>
    <formula>Referring_Account__r.Online_City__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Referring Partner Outlet Directory City</label>
    <type>Text</type>
</CustomField>