force-app/main/default/objects/Account/fields/Referring_Partner_Outlet_Directory_State__c.field-meta.xml
<CustomField>
    <fullName>Referring_Partner_Outlet_Directory_State__c</fullName>
    <formula>Referring_Account__r.Online_State__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Referring Partner Outlet Directory State</label>
    <type>Text</type>
</CustomField>