force-app/main/default/objects/Account/fields/Referring_Partner_Phone_Other__c.field-meta.xml
<CustomField>
    <fullName>Referring_Partner_Phone_Other__c</fullName>
    <formula>Referring_Account__r.phoneOther__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Referring Partner Phone (Other)</label>
    <type>Text</type>
</CustomField>