force-app/main/default/objects/Account/fields/Referring_Partner_Website__c.field-meta.xml
<CustomField>
    <fullName>Referring_Partner_Website__c</fullName>
    <formula>Referring_Account__r.Website</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Referring Partner Website</label>
    <type>Text</type>
</CustomField>