force-app/main/default/objects/Account/fields/Referring_Sales__c.field-meta.xml
<CustomField>
    <fullName>Referring_Sales__c</fullName>
    <formula>TEXT(Referring_Account__r.Oracle_Salesperson__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Referring Salesperson</label>
    <type>Text</type>
</CustomField>