force-app/main/default/objects/Account/fields/Rental_Agreement_Status__c.field-meta.xml
<CustomField>
    <fullName>Rental_Agreement_Status__c</fullName>
    <description>Status of the rental agreement process. If the agreement has been sent to the Partner and if it&#39;s been received by the ADC.</description>
    <inlineHelpText>Sent = BM has sent agreement to Partner
Received = ADC has received signed agreement from Partner</inlineHelpText>
    <label>Rental Agreement Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Sent</fullName>
            </value>
            <value>
                <fullName>Received</fullName>
            </value>
            <value>
                <fullName>Old Agreement</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>