force-app/main/default/objects/Account/fields/ResMed_Brand_Opt_In__c.field-meta.xml
<CustomField>
    <fullName>ResMed_Brand_Opt_In__c</fullName>
    <description>ITGI-484 | Brooklyn Project | COMMEXC-1366 |COMMEXC-1367. 19 June 2019.</description>
    <label>ResMed Brand Opt-In</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Unknown</fullName>
                <default>true</default>
                <label>Unknown</label>
            </value>
            <value>
                <fullName>Opt-In</fullName>
            </value>
            <value>
                <fullName>Opt-Out</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>