force-app/main/default/objects/Account/fields/ResMed_Brand_Transacted__c.field-meta.xml
<CustomField>
    <fullName>ResMed_Brand_Transacted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>ITGI-484 | Brooklyn Project | COMMEXC-1366 |COMMEXC-1367. 19 June 2019.</description>
    <label>ResMed Brand Transacted</label>
    <type>Checkbox</type>
</CustomField>