force-app/main/default/objects/Account/fields/ResMed_DVA_Partner__c.field-meta.xml
<CustomField>
    <fullName>ResMed_DVA_Partner__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check if they&#39;re a ResMed DVA Partner.</inlineHelpText>
    <label>ResMed DVA Partner</label>
    <type>Checkbox</type>
</CustomField>