force-app/main/default/objects/Account/fields/ResMed_Exclusive__c.field-meta.xml
<CustomField>
    <fullName>ResMed_Exclusive__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Does this Authorised Dealer only sell ResMed products?</inlineHelpText>
    <label>ResMed Exclusive</label>
    <type>Checkbox</type>
</CustomField>