force-app/main/default/objects/Account/fields/ResMed_Friendly__c.field-meta.xml
<CustomField>
    <fullName>ResMed_Friendly__c</fullName>
    <label>ResMed Friendly</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>To Be Decided</fullName>
                <default>true</default>
                <label>To Be Decided</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>