force-app/main/default/objects/Account/fields/ResSleep_Brand_Transacted__c.field-meta.xml
<CustomField>
    <fullName>ResSleep_Brand_Transacted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether this customer has transacted with ResSleep based on the invoices.</description>
    <label>ResSleep Brand Transacted</label>
    <type>Checkbox</type>
</CustomField>