force-app/main/default/objects/Account/fields/Resupply_Opt_out__c.field-meta.xml
<CustomField>
    <fullName>Resupply_Opt_out__c</fullName>
    <description>Change request reference: COMMEXC-2055. Opened in 19-Nov-2019. Sprint 1 | 20/11 - 3/12. Fix Version - PI3 (SEP - NOV)</description>
    <label>Resupply Opt-out</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Partner Managed</fullName>
            </value>
            <value>
                <fullName>Product Not Applicable</fullName>
            </value>
            <value>
                <fullName>Uncontactable - Address Discrepancy</fullName>
            </value>
            <value>
                <fullName>Approval #&#39;s Required</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>