force-app/main/default/objects/Account/fields/Retail_Account__c.field-meta.xml
<CustomField>
    <fullName>Retail_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If an account is part of the retail business</description>
    <label>Retail Account</label>
    <type>Checkbox</type>
</CustomField>