force-app/main/default/objects/Account/fields/Retail_Brand_Transacted__c.field-meta.xml
<CustomField>
    <fullName>Retail_Brand_Transacted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether this customer has transacted with Retail based on the invoices.</description>
    <label>Retail Brand Transacted</label>
    <type>Checkbox</type>
</CustomField>